tests/errors/semantic/blocking/INHOMOGENEOUS_MIN.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = min(True, 5+4j)
